.provarCaches/00D5h000009Q6XQEA0/objects/provar__Test_Plan_Schedule_Suite_Case__c.object
<CustomObject>
    <fields>
        <fullName>provar__Test_Case_Name__c</fullName>
        <formula>provar__Test_Suite_Case__r.provar__Test_Case__r.Name</formula>
        <label>Test Case Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Test_Plan_Schedule__c</fullName>
        <label>Test Plan Schedule</label>
        <referenceTo>provar__Test_Plan_Schedule__c</referenceTo>
        <relationshipLabel>Test Plan Schedule Suite Cases</relationshipLabel>
        <relationshipName>Test_Plan_Schedule_Suite_Cases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>provar__Test_Suite_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Suite Case</label>
        <referenceTo>provar__Test_Suite_Case__c</referenceTo>
        <relationshipLabel>Test Plan Schedule Suite Cases</relationshipLabel>
        <relationshipName>Test_Plan_Schedule_Suite_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>provar__Test_Suite_Name__c</fullName>
        <formula>provar__Test_Suite_Case__r.provar__Test_Suite__r.Name</formula>
        <label>Test Suite Name</label>
        <type>Text</type>
    </fields>
    <label>Test Plan Schedule Suite Case</label>
    <nameField>
        <displayFormat>TPSSC-{000000}</displayFormat>
        <label>Test Plan Schedule Suite Case Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Plan Schedule Suite Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>